@@ -1,38 +1,24 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    // Use JUnit test framework.
-    // testImplementation libs.junit
-
-    // This dependency is used by the application.
-    implementation libs.guava
-}
-
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
+    implementation 'com.google.guava:guava:32.1.1-jre'
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'utb.fai.App'
+}
+
+run {
+    jvmArgs = [
+        "--module-path", "/usr/lib/jvm/openjfx",
+        "--add-modules", "javafx.controls,javafx.fxml"
+    ]
 }
 
 jar {
